force-app/main/default/objects/Workflow_Audit__c/Workflow_Audit__c.object-meta.xml
<CustomObject>
    <label>Workflow Audit</label>
    <nameField>
        <displayFormat>WFAL-{0000}</displayFormat>
        <label>Workflow Audit Log	 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workflow Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>