force-app/main/default/objects/Workflow_Audit__c/fields/Audit_Text__c.field-meta.xml
<CustomField>
    <fullName>Audit_Text__c</fullName>
    <description>The system populates this optional rich text field to store workflow audit text.  By default, it is null.</description>
    <label>Audit Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>