force-app/main/default/objects/Workflow_Audit__c/fields/Interface_Context__c.field-meta.xml
<CustomField>
    <fullName>Interface_Context__c</fullName>
    <description>The system populates this optional rich text field to store the workflow interface context. By default, it is null.  Examples of the interface context include: flow, trigger, or apex code.</description>
    <label>Interface Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>