force-app/main/default/objects/Workflow_Audit__c/fields/Primary_Object_ID__c.field-meta.xml
<CustomField>
    <fullName>Primary_Object_ID__c</fullName>
    <description>The system populates this optional rich text field to store the primary object ID. By default, it is null.</description>
    <label>Primary Object ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>