force-app/main/default/objects/Workflow_Audit__c/fields/Workflow_Stage__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Stage__c</fullName>
    <description>The system populates this optional rich text field to store the workflow stage. By default, it is null.</description>
    <label>Workflow Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>