force-app/main/default/objects/Workflow_Audit__c/fields/Workflow_Type__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Type__c</fullName>
    <description>The system populates this optional rich text field to store the workflow type. By default, it is null.</description>
    <label>Workflow Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>